--- a/content/2022-05-12-simple-mdx.mdx
+++ b/content/2022-05-12-simple-mdx.mdx
@@ -115,9 +115,9 @@ If you need to bundle your dependencies along with the `MDX` component in this p
 
 Now how do you use this component on the fronted?
 
-Given the component is pure javascript you can write the code to disk and use it like you would any other JavaScript module.
+Given the component is pure `JavaScript` you can write the code to disk and use it like you would any other `JavaScript` module.
 
-**Backend** -- write generated MDX JS to disk:
+**Backend** -- write generated `MDX` `JS` to disk:
 
 ```javascript
 const filenamesAndCode = await Promise.all(
@@ -187,7 +187,7 @@ async function processMdx(file) {
 
 ## This post is MDX!
 
-This blog post is actually an MDX component!
+This blog post actually is an `MDX` component!
 
 If you view the source of this page you can see how we include the component and render it into the page --
 
