overview of mocha-script

--- a/content/2021-12-27-Personal-Vision.mdx
+++ b/content/2021-12-27-Personal-Vision.mdx
@@ -12,7 +12,19 @@ After ~8 years working at Meta and ~15 years professionally programming post col
 
 > **Create software to help people think more deeply.**
 
+> Creating assisted memory thru contextualized storage and retrieval
+
 ### Strategy
+
+To do this we need to assit in recall. Recall has a flipside though, which is the encoding of ideas as they are encountered. If the idea is not encoded well it will be difficult to recall.
+
+How might we enable rich encoding of ideas that people have to aid in recall of those ideas later.
+
+Recall is also often done within a frame of mind. E.g., I am looking to recall facts to support X or to contradict Y.
+
+How migh we capture the user's frame of mind when they're looking to recall information?
+
+Frame of mind can create bias (e.g., confirmation bias) -- how might we recall information that _might not be quite what the user wants_ but is what is relevant?
 
 Two prongs:
 
@@ -26,6 +38,16 @@ To converge organic knowledge capture with formal methods of encoding throught p
 <Figure url="/blog-assets/vision/converge.png" />
 
 ## Vision 2
+
+> **Docs as the application development platform**
+
+### Strategy
+
+> It will be interesting, however, to see the days where we're developing entirely within documents and interlinking dozens or hundreds of docs via their exports. Where the prose is the first class citizen and the code the second. The confluence of [Notion](https://www.notion.so/)/[ObservableHQ](https://observablehq.com/)/[Jupyter](https://jupyter.org/)/[Quarto](https://quarto.org/)/[MDX](https://mdxjs.com/)/[CraftDocs](https://www.craft.do/)/[Coda](https://coda.io/)/[Obsidian](https://obsidian.md/)/[Airtable](https://www.airtable.com/) like features being brought together into a single authoring and coding platform.
+>
+> <span>-- [[2022-05-12-simple-mdx]]</span>
+
+## Vision 3
 
 > **Make p2p & e2ee software as simple to develop as traditional client/server software.**
 
@@ -42,7 +64,9 @@ Dissolve central power and control to:
 
 Develop [Aphrodite](https://github.com/tantaman/aphrodite) with p2p, e2ee, p2p privacy (e.g., privacy respecting p2p replication of data), data consitency capabilities.
 
-## Vision 3
+In lay terms, the relational model underpins the vast majority of application development. Enable the relational model to be leveraged in P2P development. A relevant paper: [https://hal.inria.fr/hal-02983557/document](https://hal.inria.fr/hal-02983557/document)
+
+## Vision 4
 
 > **Software developed for the Government (by or for) is public software and thus should be open source.**
 
@@ -54,6 +78,6 @@ Cost reduction. Maintenance. More transparent governance.
 
 Lead by example. Acquire contracts and develop the solutions as open source software.
 
-## Vision 4
+## Vision 5
 
 > **Buy an island and start my own nation.**
