emojis in titles

--- a/content/2021-12-17-Object-Identity.mdx
+++ b/content/2021-12-17-Object-Identity.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 2021-12-17-Object-Identity
-title: 'Reference Equality - What is it Really?'
+title: '⛵️ Reference Equality - What is it Really?'
 tags: [software-engineering, framework]
 ---
 
