--- a/content/2021-12-23-Deeply-Nested-Updates-React.mdx
+++ b/content/2021-12-23-Deeply-Nested-Updates-React.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 2021-12-23-Deeply-Nested-Updates-React
-title: 'Reacting Better - Deeply Nested Update Problem'
+title: '☢️ Reacting Better - Deeply Nested Update Problem'
 tags: [software-engineering, react, framework]
 ---
 
