--- a/content/2022-04-07-your-package-is-two.mdx
+++ b/content/2022-04-07-your-package-is-two.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 2022-04-07-your-package-is-two
-title: 'Your One Package Might Be Two'
+title: '📦 Your One Package Might Be Two'
 tags: [software-engineering]
 js: ['https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js']
 ---
