start the query planning entry

--- a/content/2022-05-26-query-builder.mdx
+++ b/content/2022-05-26-query-builder.mdx
@@ -24,7 +24,7 @@ Given that each hop can return a new type of query (e.g., `PhotoQuery` or `UserQ
 The solution is pretty simple. Every invocation to a method on the query builder returns a new query that holds:
 
 1. A reference the previous query
-2. A reference to the operation (filter/map/limit/etc) being applied
+2. A reference to the expression (filter/map/limit/etc) being applied
 
 This forms a linked list which perfectly represents the invocations against the query builder, creating a structure that looks like:
 
@@ -37,6 +37,10 @@ UserQuery --> PhotoQueryF["PhotoQuery(uploadDate > 2022-01-01)"]
 PhotoQueryF --> PhotoQuery`}
   />
 </center>
+
+The first node in the list represents the last query builder method that was invoked (`whereName(P.equals('Jeff'))`) and the last node in the list the first query builder method (`queryPhotos`).
+
+As a JSON structure it looks like:
 
 ```typescript
 const jeffQuery = UserQuery {
@@ -55,8 +59,10 @@ const jeffQuery = UserQuery {
 ```
 
 Walking the linked list to the end will get you to the root that starts the query off.
+Running each node in the list from the end back to the start will run the full query. In reality, however, we convert the query to a `plan` and optimize the `plan` before running it.
+See [Query Planning](./2022-05-26-query-planning) for more info on this.
 
-In reality the structure is a bit more complicated since we need to constrain queries to only fetch items related to the prior hop but this is the basic idea.
+The structure is a bit more complicated in practice since we need to constrain queries to only fetch items related to the prior hop but this is the basic idea.
 
 For the interested, a more faithful representation of what happens in practice is reproduced below.
 
