--- a/content/2022-05-26-query-builder.mdx
+++ b/content/2022-05-26-query-builder.mdx
@@ -6,10 +6,10 @@ js: ['https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js']
 
 import Mermaid from '/dist/components/Mermaid.js';
 
-[Aphrodite](http://aphrodite.sh) features a rich and type safe [query builder](https://github.com/tantaman/aphrodite/blob/main/packages/integration-tests-ts/src/generated/UserQuery.ts#L17-L66).
-The builder can not only query for nodes of a given type but also traverse edges, apply filters, do pagination and more.
+[Aphrodite](http://aphrodite.sh) generates a rich and type safe query builders ([example](https://github.com/tantaman/aphrodite/blob/main/packages/integration-tests-ts/src/generated/UserQuery.ts#L17-L66)) from your schemas.
+The query builders can not only query for nodes of a given type but also traverse edges, apply filters, do pagination and more.
 
-As an example, we can traverse from a user to their photos uploaded after 2022-01-01 to users tagged in those photos named Jeff like so:
+As an example, we can traverse from a user to their photos uploaded after `2022-01-01`` to users tagged in those photos named Jeff like so:
 
 ```typescript
 const jeffQuery = user
@@ -21,12 +21,30 @@ const jeffQuery = user
 
 Given that each hop can return a new type of query (e.g., `PhotoQuery` or `UserQuery`) on which to apply filters or take more hops, how do we enable such an API?
 
-The solution is pretty simple. Every invocation to a method on the query builder returns a new query that holds:
+The solution is pretty simple. Every invocation to a method on the query builder returns a new query builder that holds:
 
 1. A reference the previous query
 2. A reference to the expression (filter/map/limit/etc) being applied
 
-This forms a linked list which perfectly represents the invocations against the query builder, creating a structure that looks like:
+I.e.,
+
+```javascript
+class UserQuery implements Query {
+  sourceQuery: Query;
+  expression: Expression | null;
+  ...
+
+  queryPhotos() {
+    return new PhotoQuery(this);
+  }
+
+  whereName(predicate) {
+    return new UserQuery(this, predicate)
+  }
+}
+```
+
+This forms a linked list which represents all the invocations made against the query builder, creating a structure that looks like:
 
 <center>
   <Mermaid
@@ -38,33 +56,15 @@ PhotoQueryF --> PhotoQuery`}
   />
 </center>
 
-The first node in the list represents the last query builder method that was invoked (`whereName(P.equals('Jeff'))`) and the last node in the list the first query builder method (`queryPhotos`).
+The first node in the list represents the last query builder method that was invoked (`whereName(P.equals('Jeff'))`) and the last node in the list the first query builder method that was invoked (`queryPhotos`).
 
-As a JSON structure it looks like:
+Walking the linked list to the end will get you to the root that starts the query.
 
-```typescript
-const jeffQuery = UserQuery {
-  expression: FilterExpression(name == 'Jeff')
-  sourceQuery: UserQuery {
-    expression: null,
-    sourceQuery: PhotoQuery {
-      expression: FilterExpression(uploadDate > new Date('2022-01-01'))
-      sourceQuery: PhotoQuery {
-        expression: null,
-        sourceQuery: null,
-      }
-    }
-  }
-}
-```
+Running each node in the list from the end back to the start will run the full query. In reality, however, we convert the query to a `plan` and optimize the `plan` before running it. See [Query Planning](./2022-05-26-query-planning).
 
-Walking the linked list to the end will get you to the root that starts the query off.
-Running each node in the list from the end back to the start will run the full query. In reality, however, we convert the query to a `plan` and optimize the `plan` before running it.
-See [Query Planning](./2022-05-26-query-planning) for more info on this.
+In reality, the above structure is actually a bit more complicated but this is the basic idea.
 
-The structure is a bit more complicated in practice since we need to constrain queries to only fetch items related to the prior hop but this is the basic idea.
-
-For the interested, a more faithful representation of what happens in practice is reproduced below.
+A more faithful representation of what is created by the query builder API in reality is reproduced below.
 
 <center>
   <Mermaid
@@ -75,7 +75,7 @@ UserQuery --> HopQueryPtoU["HopQuery(PhotosToUsersEdge)"]
 HopQueryPtoU --> PhotoQueryF["PhotoQuery(uploadDate > 2022-01-01)"]
 PhotoQueryF --> PhotoQuery
 PhotoQuery --> HopQueryUtoP["HopQuery(UsersToPhotosEdge)"]
-HopQueryUtoP --> Root["Root(User)"]`}
+HopQueryUtoP --> Root["Root(user)"]`}
   />
 </center>
 
