--- a/content/2022-05-26-query-planning.mdx
+++ b/content/2022-05-26-query-planning.mdx
@@ -26,7 +26,7 @@ returns a linked list that looks roughly like
 
 <center>
   <Mermaid
-    id="one"
+    id="hhg"
     chart={`graph LR
 UserQueryF["UserQuery(name == Jeff)"] --> UserQuery
 UserQuery --> PhotoQueryF["PhotoQuery(uploadDate > 2022-01-01)"]
@@ -40,7 +40,7 @@ The first node in the list represents the last query builder method that was inv
 
 There are several important steps that happen after building a query to get it into a state where it can be executed. The first of those is the query planning step.
 
-The core idea of query planning is to walk the list of expressions and pull out (hoist) as many expressions as possible to send them to be executed directly in the database. Expressions that cannot be hoisted will be executed within the application via the [chunk iterable framework](./2022-05-26-chunk-iterable) (chunked iteration phase to be covered in more detail in a future post).
+The core idea of query planning is to walk the list of queries and pull out (hoist) as many expressions as possible to send them to be executed directly in the database. Expressions that cannot be hoisted will be executed within the application via the [chunk iterable framework](./2022-05-26-chunk-iterable) (chunked iteration phase to be covered in more detail in a future post).
 
 ## The Walk
 
@@ -68,6 +68,9 @@ abstract class DerivedQuery {
 }
 
 abstract class SourceQuery {
+
+  ...
+
   plan() {
     // We're the source query. Return a new plan with our source expression.
     return new Plan(this.expression. [])
@@ -85,7 +88,7 @@ This query would return a linked list that looks like:
 
 <center>
   <Mermaid
-    id="twp"
+    id="ggg"
     chart={`graph LR
 UserQueryF["UserQuery(name == Bill)"] --> UserQuery
 UserQuery --> SQLSourceQuery
@@ -99,18 +102,78 @@ UserQuery --> SQLSourceQuery
 
 The plan for this query would look like:
 
-```
+```javascript
 Plan {
-  source: SQLSourceExpression,
+  source: SQLSourceExpression(table = users, db = example),
   derivations: [
     FilterExpression(name == Bill),
   ]
 }
 ```
 
-## A Complicated Walk
+## A More Complicated Walk
+
+Lets look at a more complicated query.
+
+```javascript
+const query = user
+  .queryAll()
+  .whereAge(P.greaterThan(24))
+  .whereName(P.equals('Matt'))
+  .orderBy(UserSpec.age)
+  .take(5);
+```
+
+Which generates this list of linked queries:
+
+<center>
+  <Mermaid
+    id="gfdf"
+    chart={`graph LR
+UserQueryT["UserQuery(take 5)"] --> UserQueryO["UserQuery(orderBy age)"]
+UserQueryO --> UserQueryN["UserQuery(name == 'Matt')"]
+UserQueryN --> UserQueryA["UserQuery(age > 24)"]
+UserQueryA --> UserQuery
+UserQuery --> SQLSourceQuery
+`}
+  />
+</center>
+
+Remember that the planning phase walks to the end of the list and pops a plan all the way back up the list.
+Given that, the planning phase will convert the list of queries to:
+
+```javascript
+Plan {
+  source: SQLSourceExpression(table = users, db = example),
+  derivations: [
+    FilterExpression(a > 24),
+    FilterExpression(name == 'Matt'),
+    OrderByExpression(age)
+    TakeExpression(5)
+  ]
+}
+```
+
+What this plan says is to
+
+1. Run the `SQLSourceExpression` then
+2. Run all subsequent expressions
+
+As you can see, the first step of query planning is very simple. It is just extracting and correctly ordering all of the expressions from the list of queries.
+
+Although I did say that there could be many plans from one list of queries. I also mentioned that planning involves hoisting expressions to run in the database directly.
+
+Multiple plans happen when we have "hop queries" or "edge traversals." Hoisting of expressions happens when we optimize our plan.
+
+First we'll discuss hop queries and hop plans then we'll get into hoisting and plan optimization.
 
 ## Hops and Many Plans
+
+Hops are represented as separate `HopPlans`. If we do a query like the following:
+
+```typescript
+
+```
 
 # Optimization
 
