--- a/content/2022-05-26-query-planning.mdx
+++ b/content/2022-05-26-query-planning.mdx
@@ -223,7 +223,7 @@ abstract class SourceQuery {
 
   plan() {
     // We're the source query. Return the plan with our source expression.
-    return new Plan(this.expression. [])
+    return new Plan(this.expression, [])
   }
 }
 
