process wikilinks correctly

--- a/content/2022-05-26-query-plan-optimization.mdx
+++ b/content/2022-05-26-query-plan-optimization.mdx
@@ -8,8 +8,8 @@ import Mermaid from '/dist/components/Mermaid.js';
 
 This is the third part in a deep dive into [Aphrodite's](https://aphrodite.sh) query layer.
 
-- [Part 1](./2022-05-26-query-builder) we talked about the query builder
-- [Part 2](./2022-05-26-query-planning) covered query plans
+- [[2022-05-26-query-builder:Part 1]] we talked about the query builder
+- [[2022-05-26-query-planning:Part 2]] covered query plans
 
 Now we'll cover how we optimize query plans.
 
