Fix typos in documentation

--- a/content/2022-05-12-simple-mdx.mdx
+++ b/content/2022-05-12-simple-mdx.mdx
@@ -61,8 +61,8 @@ Figuring out what to use may seem daunting so here are a few common packages.
 2. [remark-frontmatter](https://github.com/remarkjs/remark-frontmatter) - to extract frontmatter
 3. [remark-gfm](https://github.com/remarkjs/remark-gfm) - to support github flavored markdown
 4. [remark-wiki-link](https://github.com/landakram/remark-wiki-link) - to enable wiki link syntax
-5. [remark-rehype](https://github.com/remarkjs/remark-rehype) - to convert the markdown ast to an html ast for futher processing. Already included by `@mdx-js/mdx`.
-6. [rehype-highlight](https://github.com/rehypejs/rehype-highlight) - to eanble code highlighting
+5. [remark-rehype](https://github.com/remarkjs/remark-rehype) - to convert the markdown ast to an html ast for further processing. Already included by `@mdx-js/mdx`.
+6. [rehype-highlight](https://github.com/rehypejs/rehype-highlight) - to enable code highlighting
 
 ### Applying Transformations
 
